--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,15 @@ a {
   width: 100%;
   bottom: 10px;
   text-align: center;
-  color: red;
+  color: black;
   text-decoration: none;
 }
 
 div:hover a {
   display: block;
+}
+
+a:hover {
+  color: red;
 }
 /* Fine proprietà per cuoricino-selettore a comparsa*/
